login and register

--- a/smart-exchange-frnt/src/app/app.component.html
+++ b/smart-exchange-frnt/src/app/app.component.html
@@ -1,4 +1,19 @@
-<div class="logo-principal">
-    <img [src]="logo_principal" alt="">
+<div class="contenido-util">
+
+<!--     <div class="sessiones">
+        <button mat-fab extended color="primary">
+            <mat-icon>account_circle</mat-icon>
+            Iniciar sesión
+        </button><br>
+        <br>
+        <button mat-fab extended color="accent">
+            <mat-icon>how_to_reg</mat-icon>
+            Regístrate
+        </button>
+    </div>
+    <app-cacula-cambio class="calcula-cambio-home"></app-cacula-cambio> -->
+    <router-outlet></router-outlet>
 </div>
-<app-cacula-cambio class="calcula-cambio-home"></app-cacula-cambio>
+<!-- <div class="img-fondo">
+    <img [src]="img_fondo" alt="">
+</div> -->
