--- a/smart-exchange-frnt/src/styles.sass
+++ b/smart-exchange-frnt/src/styles.sass
@@ -1,3 +1,25 @@
-/* You can add global styles to this file, and also import other style files */
-.calcula-cambio mat-form-field
+@import "@angular/material/theming"
+
+html, body
+    height: 100%
+/* .calcula-cambio mat-form-field
+    width: 100% */
+body
+    margin: 0
+    background-size: cover
+    background-position: center
+    background-repeat: no-repeat
+    background-image: url('./assets/img/3247840.jpg')
+.mat-primary
+    color: var(--mat-primary)
+.mat-accent
+    color: var(--mat-accent)
+.mat-warn
+    color: var(--mat-warn)
+.card-log-reg
+    width: 40%
+    margin: auto
+.card-log-reg form mat-form-field
     width: 100%
+.card-log-reg form
+    text-align: center
