--- a/smart-exchange-frnt/src/app/app.component.sass
+++ b/smart-exchange-frnt/src/app/app.component.sass
@@ -1,3 +1,9 @@
+/* tu-componente.component.css */
+:host
+  background-size: cover
+  background-position: center
+  background-repeat: no-repeat
+  background-image: url('./../assets/img/3247840.jpg')
 .logo-principal
     width: 10%
     position: fixed
@@ -9,3 +15,20 @@
     position: fixed
     right: 3em
     top: 20%
+    width: 30%
+.img-fondo
+    position: fixed
+    width: 100%
+    height: 100%
+    z-index: 0
+.img-fondo img
+    width: 100%
+    height: 100%
+.contenido-util
+    z-index: 1
+    position: fixed
+    width: 100%
+    height: 100%
+.sessiones
+    padding: 1%
+    width: 10%
