--- a/smart-exchange-frnt/src/app/app.component.html
+++ b/smart-exchange-frnt/src/app/app.component.html
@@ -14,6 +14,7 @@
     <app-cacula-cambio class="calcula-cambio-home"></app-cacula-cambio> -->
     <router-outlet></router-outlet>
 </div>
-<!-- <div class="img-fondo">
-    <img [src]="img_fondo" alt="">
-</div> -->
+<a class="whatsapp-logo" href="https://wa.me/59173588999" target="_blank" matTooltip="Entra aquí">
+    <img [src]="whatsapp_logo" alt="">
+    <div>Chatea con nosotros</div>
+</a>
