--- a/smart-exchange-frnt/src/app/app.component.sass
+++ b/smart-exchange-frnt/src/app/app.component.sass
@@ -1,9 +1,4 @@
 /* tu-componente.component.css */
-:host
-  background-size: cover
-  background-position: center
-  background-repeat: no-repeat
-  background-image: url('./../assets/img/3247840.jpg')
 .logo-principal
     width: 10%
     position: fixed
@@ -16,19 +11,21 @@
     right: 3em
     top: 20%
     width: 30%
-.img-fondo
-    position: fixed
-    width: 100%
-    height: 100%
-    z-index: 0
-.img-fondo img
-    width: 100%
-    height: 100%
 .contenido-util
-    z-index: 1
     position: fixed
     width: 100%
     height: 100%
-.sessiones
-    padding: 1%
+.whatsapp-logo
+    text-decoration: none
+    color: #fff
+    text-align: center
     width: 10%
+    position: fixed
+    bottom: 0
+    right: 0
+    padding: 5px
+    transition: width 0.3s ease-in-out
+.whatsapp-logo img
+    width: 50%
+.whatsapp-logo:hover
+    width: 11%
