--- a/smart-exchange-frnt/src/styles.sass
+++ b/smart-exchange-frnt/src/styles.sass
@@ -1,5 +1,3 @@
-@import "@angular/material/theming"
-
 html, body
     height: 100%
 /* .calcula-cambio mat-form-field
@@ -11,14 +9,15 @@ body
     background-repeat: no-repeat
     background-image: url('./assets/img/3247840.jpg')
 .mat-primary
-    color: var(--mat-primary)
+    text-align: center
 .mat-accent
-    color: var(--mat-accent)
+    text-align: center
 .mat-warn
-    color: var(--mat-warn)
+    text-align: center
 .card-log-reg
     width: 40%
     margin: auto
+    background: rgba(255, 255, 255, 0.8) !important
 .card-log-reg form mat-form-field
     width: 100%
 .card-log-reg form
