--- a/smart-exchange-frnt/src/styles.sass
+++ b/smart-exchange-frnt/src/styles.sass
@@ -1,3 +1,6 @@
+@import "node_modules/angular-notifier/styles"
+
+
 html, body
     height: 100%
 /* .calcula-cambio mat-form-field
@@ -14,11 +17,20 @@ body
     text-align: center
 .mat-warn
     text-align: center
-.card-log-reg
+.card-log, .card-reg
     width: 40%
     margin: auto
     background: rgba(255, 255, 255, 0.8) !important
-.card-log-reg form mat-form-field
+.card-log form mat-form-field
     width: 100%
-.card-log-reg form
+.card-reg form mat-form-field
+    width: 49%
+    padding: 2px
+.card-log form, .card-reg form
     text-align: center
+.logo-log-reg
+    padding: 5px
+    width: 25%
+    margin: auto !important
+.logo-log-reg img
+    width: 100%
