--- a/smart-exchange-frnt/src/app/login/login.component.html
+++ b/smart-exchange-frnt/src/app/login/login.component.html
@@ -1,12 +1,12 @@
-<mat-card class="card-log-reg">
-    <!--         <mat-card-title class="circleLogo">
-                    <img src='assets/images/logoOrange.png' alt="">
-                </mat-card-title> -->
+<mat-card class="card-log">
+    <mat-card-title class="logo-log-reg">
+        <img src='assets/img/logo.png' alt="">
+    </mat-card-title>
     <mat-card-content class="">
-        <h4 class="mat-primary">INICIE UNA SESIÓN</h4>                
+         <h4 class="mat-primary">INICIE SESIÓN</h4>
         <form [formGroup]="loginForm" (ngSubmit)="executeAction('LOGIN')" autocomplete="off">
-            <mat-form-field appearance="outline"  matTooltip="Escriba su Cédula de identidad">
-                <mat-label>Número de documento Ej: 1010101010LP</mat-label>
+            <mat-form-field appearance="outline"  matTooltip="Ingrese su usuario">
+                <mat-label>Ingrese su usuario</mat-label>
                 <input matInput type="text" formControlName="username">
             </mat-form-field>
             <mat-form-field appearance="outline"  matTooltip="Escriba su contraseña">
