--- a/smart-exchange-frnt/src/styles.sass
+++ b/smart-exchange-frnt/src/styles.sass
@@ -10,7 +10,7 @@ body
     background-size: cover
     background-position: center
     background-repeat: no-repeat
-    background-image: url('./assets/img/3247840.jpg')
+    background-image: url('./assets/img/fondo.jpg')
 .mat-primary
     text-align: center
 .mat-accent
@@ -34,3 +34,11 @@ body
     margin: auto !important
 .logo-log-reg img
     width: 100%
+
+.grecaptcha-badge
+    width: 70px !important
+    overflow: hidden !important
+    transition: all 0.3s ease !important
+    left: 4px !important
+.grecaptcha-badge:hover
+    width: 256px !important
