--- a/smart-exchange-frnt/src/app/login/login.component.html
+++ b/smart-exchange-frnt/src/app/login/login.component.html
@@ -4,28 +4,29 @@
     </mat-card-title>
     <mat-card-content class="">
          <h4 class="mat-primary">INICIE SESIÓN</h4>
-        <form [formGroup]="loginForm" (ngSubmit)="executeAction('LOGIN')" autocomplete="off">
-            <mat-form-field appearance="outline"  matTooltip="Ingrese su usuario">
+        <form [formGroup]="loginForm" (ngSubmit)="login()" autocomplete="off">
+            <mat-form-field appearance="outline">
                 <mat-label>Ingrese su usuario</mat-label>
                 <input matInput type="text" formControlName="username">
             </mat-form-field>
-            <mat-form-field appearance="outline"  matTooltip="Escriba su contraseña">
+            <mat-form-field appearance="outline">
                 <mat-label>Contraseña</mat-label>
                 <input matInput [type]="hide?'password':'text'" formControlName="password">
                 <mat-icon class="pointer" matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
             </mat-form-field>
-            <button mat-fab extended color="primary">
+            <button mat-fab extended color="primary" [disabled]="estaCargando">
                 <mat-icon>login</mat-icon>
                 Iniciar sesión
             </button>&nbsp;
-            <button type="reset" mat-fab extended color="accent">
+            <button type="reset" mat-fab extended color="accent" [disabled]="estaCargando">
                 <mat-icon>block</mat-icon>
                 Cancelar
             </button>
         </form>
         <button routerLink="/registro" mat-button matTooltip="Regístrese para acceder al sistema" color="primary"><mat-icon>article</mat-icon>Regístrame</button>
-        <button (click)="panelManager('RESET')" mat-button matTooltip="Haga clic para recuperar su contraseña"  [color]="'primary'">
+        <button (click)="panelManager()" mat-button matTooltip="Haga clic para recuperar su contraseña"  [color]="'primary'">
         <mat-icon>pan_tool</mat-icon> Olvidé mi contraseña
         </button>
     </mat-card-content>
+    <mat-progress-bar *ngIf="estaCargando" mode="indeterminate"></mat-progress-bar>
 </mat-card>
