--- a/smart-exchange-frnt/src/app/app.component.sass
+++ b/smart-exchange-frnt/src/app/app.component.sass
@@ -17,12 +17,12 @@
     height: 100%
 .whatsapp-logo
     text-decoration: none
-    color: #fff
+    color: #0A9A8D
     text-align: center
     width: 10%
     position: fixed
     bottom: 0
-    right: 0
+    left: 0
     padding: 5px
     transition: width 0.3s ease-in-out
 .whatsapp-logo img
