--- a/smart-exchange-frnt/src/app/cliente/cliente.component.html
+++ b/smart-exchange-frnt/src/app/cliente/cliente.component.html
@@ -1,1 +1,8 @@
-LISTO PARA HACER SU PRIMER CAMBIO
+<mat-card class="trabajo">
+    <mat-card-content class="">
+        LISTO PARA HACER SU PRIMER CAMBIO
+        <div class="app-cacula-cambio">
+            <app-cacula-cambio class="app-cacula-cambio"></app-cacula-cambio>
+        </div>
+    </mat-card-content>
+</mat-card>
