--- a/smart-exchange-frnt/src/styles.sass
+++ b/smart-exchange-frnt/src/styles.sass
@@ -7,20 +7,23 @@ html, body
     width: 100% */
 body
     margin: 0
+    background-image: url('./assets/img/fondo.jpg')
     background-size: cover
     background-position: center
     background-repeat: no-repeat
-    background-image: url('./assets/img/fondo.jpg')
+    
 .mat-primary
     text-align: center
 .mat-accent
     text-align: center
 .mat-warn
     text-align: center
+.trabajo
+    background: rgba(255, 255, 255, 0.7) !important
 .card-log, .card-reg
     width: 40%
     margin: auto
-    background: rgba(255, 255, 255, 0.8) !important
+    background: rgba(255, 255, 255, 0.7) !important
 .card-log form mat-form-field
     width: 100%
 .card-reg form mat-form-field
@@ -34,11 +37,14 @@ body
     margin: auto !important
 .logo-log-reg img
     width: 100%
+.trabajo
+    width: 80%
+    margin: auto
 
-.grecaptcha-badge
-    width: 70px !important
-    overflow: hidden !important
-    transition: all 0.3s ease !important
-    left: 4px !important
-.grecaptcha-badge:hover
-    width: 256px !important
+// .grecaptcha-badge
+//     width: 70px !important
+//     overflow: hidden !important
+//     transition: all 0.3s ease !important
+//     left: 4px !important
+// .grecaptcha-badge:hover
+//     width: 256px !important
