--- a/smart-exchange-frnt/src/app/app.component.sass
+++ b/smart-exchange-frnt/src/app/app.component.sass
@@ -17,7 +17,7 @@
     height: 100%
 .whatsapp-logo
     text-decoration: none
-    color: #0A9A8D
+    color: #fff
     text-align: center
     width: 10%
     position: fixed
