--- a/smart-exchange-frnt/src/theme.scss
+++ b/smart-exchange-frnt/src/theme.scss
@@ -2,10 +2,109 @@
 @import "@angular/material/theming";
 @include mat.core();
 
+/* For use in src/lib/core/theming/_palette.scss */
+$lc-exchange-primary: (
+    50 : #e9f7e2,
+    100 : #c8ecb8,
+    200 : #a3df88,
+    300 : #7ed258,
+    400 : #63c835,
+    500 : #47be11,
+    600 : #40b80f,
+    700 : #37af0c,
+    800 : #2fa70a,
+    900 : #209905,
+    A100 : #cdffc5,
+    A200 : #a0ff92,
+    A400 : #74ff5f,
+    A700 : #5dff46,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #000000,
+        400 : #000000,
+        500 : #000000,
+        600 : #000000,
+        700 : #ffffff,
+        800 : #ffffff,
+        900 : #ffffff,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #000000,
+        A700 : #000000,
+    )
+);
 
-$angular-primary: mat.define-palette(mat.$teal-palette, 500, 100, 900);
-$angular-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-$angular-warn: mat.define-palette(mat.$red-palette);
+$lc-exchange-accent: (
+    50 : #e6e9f5,
+    100 : #c0c8e7,
+    200 : #96a3d7,
+    300 : #6c7ec7,
+    400 : #4d63bb,
+    500 : #2d47af,
+    600 : #2840a8,
+    700 : #22379f,
+    800 : #1c2f96,
+    900 : #112086,
+    A100 : #b8c0ff,
+    A200 : #8592ff,
+    A400 : #5265ff,
+    A700 : #394eff,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #000000,
+        400 : #ffffff,
+        500 : #ffffff,
+        600 : #ffffff,
+        700 : #ffffff,
+        800 : #ffffff,
+        900 : #ffffff,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #ffffff,
+        A700 : #ffffff,
+    )
+);
+
+$lc-exchange-warn: (
+    50 : #eff0f0,
+    100 : #d7d9db,
+    200 : #bcc0c3,
+    300 : #a1a7aa,
+    400 : #8c9498,
+    500 : #788186,
+    600 : #70797e,
+    700 : #656e73,
+    800 : #5b6469,
+    900 : #485156,
+    A100 : #bbe5fc,
+    A200 : #8ad2fa,
+    A400 : #52c1ff,
+    A700 : #38b8ff,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #000000,
+        400 : #000000,
+        500 : #ffffff,
+        600 : #ffffff,
+        700 : #ffffff,
+        800 : #ffffff,
+        900 : #ffffff,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #000000,
+        A700 : #000000,
+    )
+);
+
+$angular-primary: mat.define-palette($lc-exchange-primary, 500);
+$angular-accent: mat.define-palette($lc-exchange-accent, 500);
+$angular-warn: mat.define-palette($lc-exchange-warn, 500);
 
 $angular-default-theme: mat.define-light-theme(
   (
