--- a/smart-exchange-frnt/src/app/app.component.html
+++ b/smart-exchange-frnt/src/app/app.component.html
@@ -16,6 +16,6 @@
 </div>
 <a class="whatsapp-logo" href="https://wa.me/59173588999" target="_blank" matTooltip="Entra aquí">
     <img [src]="whatsapp_logo" alt="">
-    <div>Chatea con nosotros</div>
+    <div class="color-primary">Chatea con nosotros</div>
 </a>
 <notifier-container></notifier-container>
