--- a/smart-exchange-frnt/src/app/cliente/cliente.component.sass
+++ b/smart-exchange-frnt/src/app/cliente/cliente.component.sass
@@ -1,3 +1,52 @@
-.app-cacula-cambio
-    width: 40% !important
+.contenido-general
+    background: #ffffff
+    width: 60%
     margin: auto
+    border-radius: 0.5em
+    padding: 0.7em
+    box-sizing: border-box
+    font-size: 1.5em
+    text-align: center
+.compra-venta
+    width: 100%
+    text-align: center
+    display: flex
+    justify-content: space-between
+.compra, .venta
+    width: 50%
+    margin: 10px
+    box-sizing: border-boxd
+//////// cambios
+.envio-recibo
+    display: flex
+    align-items: center
+    position: relative
+    box-sizing: border-box
+.envio, .recibo
+    width: 50%
+    box-sizing: border-box
+    div
+        width: 100%
+        text-align: center
+    mat-form-field
+        width: 100%
+.cambio
+    position: absolute
+    left: 50%
+    transform: translateX(-50%)
+    top: 1.5em
+    cursor: pointer
+    z-index: 2
+.envio
+    text-align: right
+    padding-right: 1.2em
+.recibo
+    text-align: lefth
+    padding-left: 1em
+img[matSuffix]
+    height: 2.5em
+    width: auto
+    margin-right: 8px
+.extra
+    font-size: 0.8em
+/////////cambios;
