--- a/smart-exchange-frnt/src/app/login/login.component.html
+++ b/smart-exchange-frnt/src/app/login/login.component.html
@@ -1,34 +1,40 @@
-<mat-card class="card-log">
-    <mat-card-title class="logo-log-reg">
-        <img src='assets/img/logo.png' alt="">
-    </mat-card-title>
-    <mat-card-content class="">
-         <h4 class="mat-primary">INICIE SESIÓN</h4>
-        <form [formGroup]="loginForm" (ngSubmit)="login()" autocomplete="off">
-            <mat-form-field appearance="outline">
-                <mat-label>Ingrese su usuario</mat-label>
-                <input matInput type="text" formControlName="username">
-            </mat-form-field>
-            <mat-form-field appearance="outline">
-                <mat-label>Contraseña</mat-label>
-                <input matInput [type]="hide?'password':'text'" formControlName="password">
-                <mat-icon class="pointer" matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-            </mat-form-field>
-            <button mat-fab extended color="primary" [disabled]="estaCargando">
-                <mat-icon>login</mat-icon>
-                Iniciar sesión
-            </button>&nbsp;
-            <button type="reset" mat-fab extended color="accent" [disabled]="estaCargando">
-                <mat-icon>block</mat-icon>
-                Cancelar
-            </button>
-        </form>
-        <button routerLink="/registro" mat-button matTooltip="Regístrese para acceder al sistema" color="primary"><mat-icon>article</mat-icon>Regístrame</button>
-        <button (click)="panelManager()" mat-button matTooltip="Haga clic para recuperar su contraseña"  [color]="'primary'">
-        <mat-icon>pan_tool</mat-icon> Olvidé mi contraseña
-        </button>
-    </mat-card-content>
-    <mat-card-footer>
-        <mat-progress-bar *ngIf="estaCargando" mode="indeterminate"></mat-progress-bar>
-    </mat-card-footer>
-</mat-card>
+<div class="loging-wrapper">
+    <div class="loging-box">
+        <div class="loging-left-box">
+            <div class="loging-formulario">
+                <div class="logo-log-reg">
+                    <img src='assets/img/logo.png' alt="">
+                </div>
+                 <h4 class="mat-primary">INICIE SESIÓN</h4>
+                <form [formGroup]="loginForm" (ngSubmit)="login()" autocomplete="off">
+                    <mat-form-field appearance="outline">
+                        <mat-label>Ingrese su usuario</mat-label>
+                        <input matInput type="text" formControlName="username">
+                    </mat-form-field>
+                    <mat-form-field appearance="outline">
+                        <mat-label>Contraseña</mat-label>
+                        <input matInput [type]="hide?'password':'text'" formControlName="password">
+                        <mat-icon class="pointer" matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                    </mat-form-field>
+                    <button mat-fab extended color="primary" [disabled]="estaCargando">
+                        <mat-icon>login</mat-icon>
+                        Iniciar sesión
+                    </button>&nbsp;
+                    <button type="reset" mat-fab extended color="accent" [disabled]="estaCargando">
+                        <mat-icon>block</mat-icon>
+                        Cancelar
+                    </button>
+                </form>
+                <button routerLink="/registro" mat-button matTooltip="Regístrese para acceder al sistema" color="primary"><mat-icon>article</mat-icon>Regístrame</button>
+                <button (click)="panelManager()" mat-button matTooltip="Haga clic para recuperar su contraseña"  [color]="'primary'">
+                <mat-icon>pan_tool</mat-icon> Olvidé mi contraseña
+                </button>
+                <mat-progress-bar *ngIf="estaCargando" mode="indeterminate" class="cargando"></mat-progress-bar>
+            </div>
+    </div>
+    <div class="loging-right-box">
+      <p>Contenido Derecho</p>
+    </div>
+    </div>
+</div>
+
