--- a/smart-exchange-frnt/src/app/registrate/registrate.component.html
+++ b/smart-exchange-frnt/src/app/registrate/registrate.component.html
@@ -1,77 +1,81 @@
-<div class="promocion-contenido">
-        <mat-icon fontIcon="devices"></mat-icon>
-        <mat-icon fontIcon="currency_exchange"></mat-icon>
-</div>
-<div class="card-reg">
-    <div class="logo-log-reg">
-        <img src='assets/img/logo.png' alt="">
+<div class="loging-wrapper">
+    <div class="loging-box">
+        <div class="loging-left-box">
+            <div class="loging-formulario">
+                <div class="logo-log-reg">
+                    <img src='assets/img/logo.png' alt="">
+                </div>
+                <h4 class="mat-primary">REGÍSTRATE Y OBTENER LOS MEJORES CAMBIOS</h4> 
+                <form [formGroup]="registraForm" (ngSubmit)="registra()" autocomplete="off">
+<!--                     <mat-form-field appearance="outline">
+                        <mat-label>Nombres</mat-label>
+                        <input matInput type="text" formControlName="nombres">
+                    </mat-form-field>
+                    <mat-form-field appearance="outline">
+                        <mat-label>Apellido paterno</mat-label>
+                        <input matInput type="text" formControlName="apPaterno">
+                    </mat-form-field>
+                    <mat-form-field appearance="outline">
+                        <mat-label>Apellido materno</mat-label>
+                        <input matInput type="text" formControlName="apMaterno">
+                    </mat-form-field> -->
+                    <mat-form-field appearance="outline">
+                        <mat-label>Correo</mat-label>
+                        <input matInput type="text" formControlName="correo">
+                        <mat-error *ngIf="registraForm.get('correo')?.hasError('required')">
+                            El correo es <strong>obligatorio</strong>
+                        </mat-error>
+                        <mat-error *ngIf="registraForm.get('correo')?.hasError('email')">
+                            Debe ser un correo <strong>válido</strong>
+                        </mat-error>
+                    </mat-form-field>
+                    <mat-form-field appearance="outline">
+                        <mat-label>Contraseña</mat-label>
+                        <input matInput [type]="hide1?'password':'text'" formControlName="password">
+                        <mat-icon class="pointer" matSuffix (click)="hide1 = !hide1">{{hide1 ? 'visibility_off' : 'visibility'}}</mat-icon>
+                        <mat-error *ngIf="registraForm.get('password')?.hasError('required')">
+                            El password es <strong>obligatorio</strong>
+                        </mat-error>
+                        <mat-error *ngIf="registraForm.get('password')?.hasError('minlength')">
+                            Mínimo <strong>8 caracteres</strong>
+                        </mat-error>
+                        <mat-error *ngIf="registraForm.get('password')?.hasError('maxlength')">
+                            Máximo <strong>30 caracteres</strong>
+                        </mat-error>
+                    </mat-form-field>
+                    <mat-form-field appearance="outline">
+                        <mat-label>Confirmar contraseña</mat-label>
+                        <input matInput [type]="hide2?'password':'text'" formControlName="rePassword">
+                        <mat-icon class="pointer" matSuffix (click)="hide2 = !hide2">{{hide2 ? 'visibility_off' : 'visibility'}}</mat-icon>
+                        <mat-error *ngIf="registraForm.get('rePassword')?.hasError('required')">
+                            El password es <strong>obligatorio</strong>
+                        </mat-error>
+                        <mat-error *ngIf="registraForm.get('rePassword')?.hasError('minlength')">
+                            Mínimo <strong>8 caracteres</strong>
+                        </mat-error>
+                        <mat-error *ngIf="registraForm.get('rePassword')?.hasError('maxlength')">
+                            Máximo <strong>30 caracteres</strong>
+                        </mat-error>
+                         <mat-error *ngIf="registraForm.get('rePassword')?.hasError('confirmPasswordValidator')">
+                            Los passwords <strong>deben ser iguales</strong>
+                        </mat-error>
+                    </mat-form-field>
+                    <button mat-fab extended color="primary" [disabled]="estaCargando">
+                        <mat-icon>article</mat-icon>
+                        Registrar
+                    </button>&nbsp;
+                    <button type="button" routerLink="/login" mat-fab extended color="accent" [disabled]="estaCargando">
+                        <mat-icon>block</mat-icon>
+                        Cancelar
+                    </button>
+                    <mat-progress-bar *ngIf="estaCargando" mode="indeterminate" class="cargando"></mat-progress-bar>
+                </form>
+            </div>
     </div>
-    <div class="">
-        <h4 class="mat-primary">REGÍSTRATE PARA OBTENER LOS MEJORES CAMBIOS</h4> 
-        <form [formGroup]="registraForm" (ngSubmit)="registra()" autocomplete="off">
-            <mat-form-field appearance="outline">
-                <mat-label>Nombres</mat-label>
-                <input matInput type="text" formControlName="nombres">
-            </mat-form-field>
-            <mat-form-field appearance="outline">
-                <mat-label>Apellido paterno</mat-label>
-                <input matInput type="text" formControlName="apPaterno">
-            </mat-form-field>
-            <mat-form-field appearance="outline">
-                <mat-label>Apellido materno</mat-label>
-                <input matInput type="text" formControlName="apMaterno">
-            </mat-form-field>
-            <mat-form-field appearance="outline">
-                <mat-label>Correo</mat-label>
-                <input matInput type="text" formControlName="correo">
-                <mat-error *ngIf="registraForm.get('correo')?.hasError('required')">
-                    El correo es <strong>obligatorio</strong>
-                </mat-error>
-                <mat-error *ngIf="registraForm.get('correo')?.hasError('email')">
-                    Debe ser un correo <strong>válido</strong>
-                </mat-error>
-            </mat-form-field>
-            <mat-form-field appearance="outline">
-                <mat-label>Contraseña</mat-label>
-                <input matInput [type]="hide1?'password':'text'" formControlName="password">
-                <mat-icon class="pointer" matSuffix (click)="hide1 = !hide1">{{hide1 ? 'visibility_off' : 'visibility'}}</mat-icon>
-                <mat-error *ngIf="registraForm.get('password')?.hasError('required')">
-                    El password es <strong>obligatorio</strong>
-                </mat-error>
-                <mat-error *ngIf="registraForm.get('password')?.hasError('minlength')">
-                    Mínimo <strong>8 caracteres</strong>
-                </mat-error>
-                <mat-error *ngIf="registraForm.get('password')?.hasError('maxlength')">
-                    Máximo <strong>30 caracteres</strong>
-                </mat-error>
-            </mat-form-field>
-            <mat-form-field appearance="outline">
-                <mat-label>Confirmar contraseña</mat-label>
-                <input matInput [type]="hide2?'password':'text'" formControlName="rePassword">
-                <mat-icon class="pointer" matSuffix (click)="hide2 = !hide2">{{hide2 ? 'visibility_off' : 'visibility'}}</mat-icon>
-                <mat-error *ngIf="registraForm.get('rePassword')?.hasError('required')">
-                    El password es <strong>obligatorio</strong>
-                </mat-error>
-                <mat-error *ngIf="registraForm.get('rePassword')?.hasError('minlength')">
-                    Mínimo <strong>8 caracteres</strong>
-                </mat-error>
-                <mat-error *ngIf="registraForm.get('rePassword')?.hasError('maxlength')">
-                    Máximo <strong>30 caracteres</strong>
-                </mat-error>
-                 <mat-error *ngIf="registraForm.get('rePassword')?.hasError('confirmPasswordValidator')">
-                    Los passwords <strong>deben ser iguales</strong>
-                </mat-error>
-            </mat-form-field>
-            <button mat-fab extended color="primary" [disabled]="estaCargando">
-                <mat-icon>article</mat-icon>
-                Registrar
-            </button>&nbsp;
-            <button type="button" routerLink="/login" mat-fab extended color="accent" [disabled]="estaCargando">
-                <mat-icon>block</mat-icon>
-                Cancelar
-            </button>
-        </form>
+    <div class="loging-right-box">
+      <p>Contenido Derecho</p>
     </div>
-    <mat-progress-bar *ngIf="estaCargando" mode="indeterminate"></mat-progress-bar>
+    </div>
 </div>
+
   
