--- a/smart-exchange-frnt/src/styles.sass
+++ b/smart-exchange-frnt/src/styles.sass
@@ -7,11 +7,9 @@ html, body
     width: 100% */
 body
     margin: 0
-    background: rgb(2,0,36)
-    background: -moz-linear-gradient(11deg, rgba(2,0,36,1) 0%, rgba(29,178,144,1) 0%, rgba(0,212,255,0.17130602240896353) 50%)
-    background: -webkit-linear-gradient(11deg, rgba(2,0,36,1) 0%, rgba(29,178,144,1) 0%, rgba(0,212,255,0.17130602240896353) 50%)
-    background: linear-gradient(11deg, rgba(2,0,36,1) 0%, rgba(29,178,144,1) 0%, rgba(0,212,255,0.17130602240896353) 50%)
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#020024",endColorstr="#00d4ff",GradientType=1)
+    height: 100%
+    background: #F5F5F5
+    font-size: 1.5em
 /*     background-image: url('./assets/img/fondo.jpg')
     background-size: cover
     background-position: center
@@ -61,7 +59,7 @@ mat-form-field
     text-align: center
 .logo-log-reg
     padding: 5px
-    width: 25%
+    width: 50%
     margin: auto !important
 .logo-log-reg img
     width: 100%
@@ -72,7 +70,8 @@ mat-form-field
   position: absolute
   right: 1em
   cursor: pointer
-
+.cargando
+    margin-top: 0.5em
 // .grecaptcha-badge
 //     width: 70px !important
 //     overflow: hidden !important
@@ -83,3 +82,67 @@ mat-form-field
 .mat-mdc-fab.mat-primary, .mat-mdc-mini-fab.mat-primary
     --mdc-fab-icon-color: #ffffff
     --mat-mdc-fab-color: #ffffff
+/////////////////////////LOGIN REGISTRO
+.loging-wrapper
+    display: flex
+    justify-content: center
+    align-items: center
+    height: 100vh
+    width: 70%
+    margin: auto
+
+.loging-box
+    flex: 1
+    display: flex
+    flex-direction: row
+    background: white
+    align-items: stretch
+    border-radius: 0.5em
+    -webkit-box-shadow: 0px 0px 21px -2px rgba(0,0,0,0.75)
+    -moz-box-shadow: 0px 0px 21px -2px rgba(0,0,0,0.75)
+    box-shadow: 0px 0px 21px -2px rgba(0,0,0,0.75)
+    height: 80%
+    .loging-left-box, .loging-right-box
+        padding: 5px
+        box-sizing: border-box
+        width: 50%
+        display: flex
+        justify-content: center
+        align-items: center
+    .loging-right-box
+        background: linear-gradient(63deg, rgba(32,181,152,1) 0%, rgba(6,162,201,1) 43%, rgba(1,157,214,1) 100%)
+        border-top-right-radius: 0.5em
+        border-bottom-right-radius: 0.5em
+        min-height: 100%
+
+.loging-formulario
+    text-align: center
+    mat-form-field
+        width: 80%
+        margin: auto
+/////////////////////////LOGIN REGISTRO;
+/////////////////////////COMPONENTE
+.loging-wrapper
+    display: flex
+    justify-content: center
+    align-items: center
+    height: 100vh
+    width: 70%
+    margin: auto
+
+.loging-box
+    flex: 1
+    display: flex
+    flex-direction: row
+    background: white
+    align-items: stretch
+    border-radius: 0.5em
+    -webkit-box-shadow: 0px 0px 21px -2px rgba(0,0,0,0.75)
+    -moz-box-shadow: 0px 0px 21px -2px rgba(0,0,0,0.75)
+    box-shadow: 0px 0px 21px -2px rgba(0,0,0,0.75)
+    height: 80%
+/////////////////////////COMPONENTE;
+.logo-principal
+    width: 10em
+    img
+        width: 100%
