--- a/smart-exchange-frnt/src/theme.scss
+++ b/smart-exchange-frnt/src/theme.scss
@@ -69,7 +69,7 @@ $lc-exchange-accent: (
     )
 );
 
-$lc-exchange-warn: (
+/* $lc-exchange-warn: (
     50 : #eff0f0,
     100 : #d7d9db,
     200 : #bcc0c3,
@@ -100,6 +100,39 @@ $lc-exchange-warn: (
         A400 : #000000,
         A700 : #000000,
     )
+); */
+
+$lc-exchange-warn: (
+  50 : #fee9e8,
+  100 : #fcc9c5,
+  200 : #faa59f,
+  300 : #f78078,
+  400 : #f6655b,
+  500 : #f44a3e,
+  600 : #f34338,
+  700 : #f13a30,
+  800 : #ef3228,
+  900 : #ec221b,
+  A100 : #ffffff,
+  A200 : #ffedec,
+  A400 : #ffbbb9,
+  A700 : #ffa2a0,
+  contrast: (
+      50 : #000000,
+      100 : #000000,
+      200 : #000000,
+      300 : #000000,
+      400 : #000000,
+      500 : #ffffff,
+      600 : #ffffff,
+      700 : #ffffff,
+      800 : #ffffff,
+      900 : #ffffff,
+      A100 : #000000,
+      A200 : #000000,
+      A400 : #000000,
+      A700 : #000000,
+  )
 );
 
 $angular-primary: mat.define-palette($lc-exchange-primary, 500);
@@ -135,16 +168,31 @@ $angular-dark-theme: mat.define-dark-theme(
 html, body { height: 100%; }
 body { margin: 0; }
 
-.primary-default {
-  background-color: mat.get-color-from-palette($angular-primary, 500);
+.primary-color {
+  color: mat.get-color-from-palette($angular-primary, 500);
 }
 
-.accent-default {
-  background-color: mat.get-color-from-palette($angular-accent, A200);
+.accent-color {
+  color: mat.get-color-from-palette($angular-accent, 500);
 }
 
-.warn-default {
-  background-color: mat.get-color-from-palette($angular-warn);
+.warn-color {
+  color: mat.get-color-from-palette($angular-warn, 500);
+}
+
+.primary-background {
+  background: mat.get-color-from-palette($angular-primary, 500);
+  color: #ffffff;
+}
+
+.accent-background {
+  background: mat.get-color-from-palette($angular-accent, 500);
+  color: #ffffff;
+}
+
+.warn-background {
+  background: mat.get-color-from-palette($angular-warn, 500);
+  color: #ffffff;
 }
 
 .mat-mdc-snack-bar-container {
