--- a/smart-exchange-frnt/src/app/login/login.component.html
+++ b/smart-exchange-frnt/src/app/login/login.component.html
@@ -33,7 +33,7 @@
             </div>
     </div>
     <div class="loging-right-box">
-      <p>Contenido Derecho</p>
+      <p>Contenido</p>
     </div>
     </div>
 </div>
