--- a/smart-exchange-frnt/src/app/registrate/registrate.component.html
+++ b/smart-exchange-frnt/src/app/registrate/registrate.component.html
@@ -61,7 +61,7 @@
                         </mat-error>
                     </mat-form-field>
                     <button mat-fab extended color="primary" [disabled]="estaCargando">
-                        <mat-icon>article</mat-icon>
+                        <mat-icon>check</mat-icon>
                         Registrar
                     </button>&nbsp;
                     <button type="button" routerLink="/login" mat-fab extended color="accent" [disabled]="estaCargando">
@@ -73,7 +73,7 @@
             </div>
     </div>
     <div class="loging-right-box">
-      <p>Contenido Derecho</p>
+      <p>Contenido</p>
     </div>
     </div>
 </div>
