--- a/smart-exchange-frnt/src/styles.sass
+++ b/smart-exchange-frnt/src/styles.sass
@@ -14,7 +14,19 @@ body
     background-size: cover
     background-position: center
     background-repeat: no-repeat */
-    
+.contenido-general
+    background: #ffffff
+    width: 60%
+    margin: auto
+    border-radius: 0.5em
+    padding: 0.7em
+    box-sizing: border-box
+    font-size: 1.5em
+    text-align: center
+.cierra-componente
+    position: absolute
+    right: 1em
+    cursor: pointer
 .mat-primary
     text-align: center
 .mat-accent
@@ -53,7 +65,7 @@ body
 .card-reg form mat-form-field
     width: 49%
     padding: 2px
-mat-form-field
+mat-form-field, mat-slide-toggle
     padding: 2px
 .card-log form, .card-reg form
     text-align: center
