--- a/smart-exchange-frnt/src/app/principal/principal.component.html
+++ b/smart-exchange-frnt/src/app/principal/principal.component.html
@@ -4,28 +4,38 @@
             <img src='assets/img/logo.png' alt="">
         </div>
     </span>
-    <span class="toolbar-section center">
+    <span class="toolbar-section center" *ngIf="esCliente()">
         <button mat-button color="primary" class="elemento menu-texto"><b>Nueva operación</b></button>
         <button mat-button color="primary" class="elemento menu-texto"><b>Mis operaciones</b></button>
         <button mat-button color="primary" class="elemento menu-texto"><b>Cuentas bancarias</b></button>
     </span>
+        <span class="toolbar-section center" *ngIf="esOperador()">
+        <button routerLink="/operaciones/tipo-cambio" mat-button color="primary" class="elemento menu-texto"><b>Operaciones</b></button>
+        <button mat-button color="primary" class="elemento menu-texto"><b>Tipos de cambio</b></button>
+    </span>
     <span class="toolbar-section right">
         <small class="accent-color"><b>correo@gmail.com</b> </small>
-        <!-- <button mat-mini-fab color="primary"  class="elemento">
-            <mat-icon matBadge="15" matBadgeColor="warn">account_circle</mat-icon>
-        </button> -->
         <button mat-mini-fab color="primary"  class="elemento" [matMenuTriggerFor]="menu">
-            <mat-icon matBadge="15" matBadgeColor="warn">account_circle</mat-icon>
+            <mat-icon [matBadge]="notificaciones.length" matBadgeColor="warn">account_circle</mat-icon>
         </button>
           <mat-menu #menu="matMenu">
             <button mat-menu-item>
               <mat-icon>person</mat-icon>
               <span>Actualizar mis datos</span>
             </button>
+            <button mat-menu-item [matMenuTriggerFor]="notif" *ngIf="notificaciones.length>0">
+              <mat-icon [matBadge]="notificaciones.length" matBadgeColor="warn">notifications_active</mat-icon>
+              <span>Notificaciones</span>
+            </button>
             <button mat-menu-item routerLink="/login">
               <mat-icon>logout</mat-icon>
               <span>Cerrar sesión</span>
             </button>
+          </mat-menu>
+          <mat-menu #notif="matMenu">
+            <ng-container *ngFor="let item of notificaciones">
+              <button (click)="ejecutarMetodo(item.metodo)" mat-menu-item>{{item.descripcion}}</button>
+            </ng-container>
           </mat-menu>
     </span>
 </mat-toolbar>
