--- a/smart-exchange-frnt/src/app/cliente/cliente.component.html
+++ b/smart-exchange-frnt/src/app/cliente/cliente.component.html
@@ -28,7 +28,23 @@
             </div>
         </div>
         <small class="extra accent-color">Ganas 0.234 más que en el banco</small><br>
-        
+        <mat-card>
+            <mat-card-header>
+              <mat-card-subtitle>¿De dónde nos envías tu dinero?</mat-card-subtitle>
+            </mat-card-header>
+            <mat-card-content>
+            </mat-card-content>
+        </mat-card>
+        <br>
+        <mat-card>
+            <mat-card-header>
+              <mat-card-subtitle>¿Dónde quieres recibir tu dinero?</mat-card-subtitle>
+            </mat-card-header>
+            <mat-card-content>
+            </mat-card-content>
+        </mat-card>
+
+
         <button mat-fab extended color="primary">
             INICIAR OPERACIÓN
         </button>
