--- a/smart-exchange-frnt/src/app/cliente/cuentas-bancarias/cuentas-bancarias.component.html
+++ b/smart-exchange-frnt/src/app/cliente/cuentas-bancarias/cuentas-bancarias.component.html
@@ -1,4 +1,4 @@
-<mat-card class="datos-personales-card">
+<mat-card class="cuentas-bancarias-card">
     <mat-card-header>
         <span class="cierra-componente accent-color">
             <mat-icon (click)="close(false)" matTooltip="Cerrar">cancel</mat-icon>
