--- a/smart-exchange-frnt/src/styles.sass
+++ b/smart-exchange-frnt/src/styles.sass
@@ -91,9 +91,11 @@ mat-form-field, mat-slide-toggle
 //     left: 4px !important
 // .grecaptcha-badge:hover
 //     width: 256px !important
-.mat-mdc-fab.mat-primary, .mat-mdc-mini-fab.mat-primary
+.mat-mdc-fab.mat-primary, .mat-mdc-mini-fab.mat-primary, .mat-mdc-raised-button.mat-primary
     --mdc-fab-icon-color: #ffffff
     --mat-mdc-fab-color: #ffffff
+    --mat-mdc-raised-color: #ffffff
+    --mdc-protected-button-label-text-color: #ffffff
 /////////////////////////LOGIN REGISTRO
 .loging-wrapper
     display: flex
