--- a/smart-exchange-frnt/src/app/principal/principal.component.html
+++ b/smart-exchange-frnt/src/app/principal/principal.component.html
@@ -5,9 +5,9 @@
         </div>
     </span>
     <span class="toolbar-section center" *ngIf="esCliente()">
-        <button mat-button color="primary" class="elemento menu-texto"><b>Nueva operación</b></button>
+        <button routerLink="/cliente/nueva-operacion" mat-button color="primary" class="elemento menu-texto"><b>Nueva operación</b></button>
         <button mat-button color="primary" class="elemento menu-texto"><b>Mis operaciones</b></button>
-        <button mat-button color="primary" class="elemento menu-texto"><b>Cuentas bancarias</b></button>
+        <button routerLink="/cliente/cuentas-bancarias" mat-button color="primary" class="elemento menu-texto"><b>Cuentas bancarias</b></button>
     </span>
         <span class="toolbar-section center" *ngIf="esOperador()">
         <button routerLink="/operaciones/tipo-cambio" mat-button color="primary" class="elemento menu-texto"><b>Operaciones</b></button>
